# argoworkflows-k8s

./: .dockerignore  .env.docker.example  .env.example  .gitignore  Dockerfile  LICENSE  README.md  docker-compose.yml  main.py  pyproject.toml
accounts/: access.py  admin.py  backends.py  decorators.py  models.py  oidc.py
accounts/migrations/: 0001_initial.py  0002_userprofile_keycloak_groups.py
clusters/: admin.py  forms.py  models.py  urls.py  views.py
clusters/exploration/: __init__.py  authorization.py  client.py  namespaces.py  urls.py  views.py
clusters/migrations/: 0001_initial.py  0002_split_cluster_tokens.py  0003_role_binding_creator_token.py
config/: settings.py  urls.py
core/: urls.py  views.py
core/templatetags/: access_tags.py
docker/: entrypoint.sh
docker/keycloak/: awf-realm.json
docs/: PLATFORM_GUIDE.md
k8s/cluster-bootstrap/: README.md  install.sh  namespace.yaml  rbac.yaml  sa.yaml
resources/: admin.py  argo_rbac.py  context_processors.py  forms.py  models.py  naming.py  urls.py  views.py
resources/migrations/: 0001_initial.py  0002_resourceprovision_provision_steps.py
resources/services/: helpers.py  provisioner.py  sa_token.py
static/css/: style.css
static/js/: namespace-panel.js  token-toggle.js
templates/: base.html
templates/clusters/: cluster_confirm_delete.html  cluster_form.html  cluster_list.html
templates/core/: admin_control.html  dashboard.html  home.html  profile.html
templates/partials/: group_list.html  logout_button.html
workflows/: admin.py  apps.py  forms.py  models.py  urls.py  views.py
(+17 files in other folders)
